# This toml file is in comliance with PEP 517, PEP 518 and PEP 621
# However, setuptools support for these is only in Beta
# For now, `setup.py` is still the first option for pip
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 50", "setuptools-scm[toml]>=6.2", "wheel"]

[project]
name = "Navix"
dynamic = ["version", "dependencies"]
description = "Accelerated gridworld navigation with JAX for deep reinforcement learning"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE", name = "Apache-2.0"}
authors = [
  {name = "Eduardo Pignatelli", email = "edu.pignatelli@gmail.com"},
]
maintainers = [
  {name = "Eduardo Pignatelli", email = "edu.pignatelli@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Environment :: GPU :: NVIDIA CUDA :: 11.0",
  "Environment :: GPU :: NVIDIA CUDA :: 11.1",
  "Environment :: GPU :: NVIDIA CUDA :: 11.2",
  "Environment :: GPU :: NVIDIA CUDA :: 11.3",
  "Environment :: GPU :: NVIDIA CUDA :: 11.4",
  "Environment :: GPU :: NVIDIA CUDA :: 11.5",
  "Environment :: GPU :: NVIDIA CUDA :: 11.6",
  "Environment :: GPU :: NVIDIA CUDA :: 11.7",
  "Environment :: GPU :: NVIDIA CUDA :: 11.8",
  "Framework :: Pytest",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.urls]
homepage = "https://github.com/epignatelli/navix"
repository = "https://github.com/epignatelli/navix"
bug_tracker = "https://github.com/epignatelli/navix/issues"


[tool.setuptools.dynamic]
version = {attr = "navix._version.__version__"}
dependencies = {file = "./requirements.txt"}


[tool.setuptools.packages.find]
include = ["navix*", "assets*"]
exclude = ["tests", "examples", "scripts", "docs"]


[tool.distutils.bdist_wheel]
universal = true


[tool.black]
line-length = 88
